<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>505</width>
    <height>406</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <pointsize>10</pointsize>
   </font>
  </property>
  <property name="windowTitle">
   <string>Регулярные выражения: поиск номеров телефонов</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <widget class="QLineEdit" name="regExpEdit">
    <property name="geometry">
     <rect>
      <x>170</x>
      <y>10</y>
      <width>321</width>
      <height>20</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Verdana</family>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="text">
     <string>(\d+-\d+-\d+)</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
      <width>141</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Регулярное выражение:</string>
    </property>
   </widget>
   <widget class="QPlainTextEdit" name="sourceText">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>60</y>
      <width>481</width>
      <height>81</height>
     </rect>
    </property>
    <property name="sizePolicy">
     <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
    <property name="sizeIncrement">
     <size>
      <width>1</width>
      <height>1</height>
     </size>
    </property>
    <property name="font">
     <font>
      <family>Verdana</family>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="sizeAdjustPolicy">
     <enum>QAbstractScrollArea::AdjustToContentsOnFirstShow</enum>
    </property>
    <property name="plainText">
     <string>Offsets:   12  sdgsd 14 99 231 7
213-12-14</string>
    </property>
   </widget>
   <widget class="QPlainTextEdit" name="resultText">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>170</y>
      <width>481</width>
      <height>161</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Verdana</family>
      <pointsize>12</pointsize>
     </font>
    </property>
   </widget>
   <widget class="QCheckBox" name="maxLenSearchBox">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>330</y>
      <width>281</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
     <string>Жадный поиск строк (как можно длинее)</string>
    </property>
    <property name="checked">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>40</y>
      <width>141</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Текст для анализа:</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>150</y>
      <width>141</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Результаты анализа:</string>
    </property>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>505</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menu">
    <property name="title">
     <string>Файл</string>
    </property>
    <addaction name="loadAction"/>
    <addaction name="saveAction"/>
    <addaction name="clearAction"/>
   </widget>
   <widget class="QMenu" name="menu_2">
    <property name="title">
     <string>Настройки</string>
    </property>
    <addaction name="chooseFontsAction"/>
   </widget>
   <addaction name="menu"/>
   <addaction name="menu_2"/>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="loadAction">
   <property name="text">
    <string>Загрузка из файла</string>
   </property>
  </action>
  <action name="saveAction">
   <property name="text">
    <string>Сохранение в файл</string>
   </property>
  </action>
  <action name="clearAction">
   <property name="text">
    <string>Очистить текст</string>
   </property>
  </action>
  <action name="chooseFontsAction">
   <property name="text">
    <string>Шрифт</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections>
  <connection>
   <sender>sourceText</sender>
   <signal>textChanged()</signal>
   <receiver>MainWindow</receiver>
   <slot>applyRegExp()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>245</x>
     <y>118</y>
    </hint>
    <hint type="destinationlabel">
     <x>252</x>
     <y>185</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>regExpEdit</sender>
   <signal>textChanged(QString)</signal>
   <receiver>MainWindow</receiver>
   <slot>applyRegExp()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>310</x>
     <y>62</y>
    </hint>
    <hint type="destinationlabel">
     <x>252</x>
     <y>185</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>maxLenSearchBox</sender>
   <signal>stateChanged(int)</signal>
   <receiver>MainWindow</receiver>
   <slot>applyRegExp()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>95</x>
     <y>371</y>
    </hint>
    <hint type="destinationlabel">
     <x>252</x>
     <y>202</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>clearAction</sender>
   <signal>triggered()</signal>
   <receiver>sourceText</receiver>
   <slot>clear()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>245</x>
     <y>118</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>saveAction</sender>
   <signal>triggered()</signal>
   <receiver>MainWindow</receiver>
   <slot>saveText()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>252</x>
     <y>202</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>loadAction</sender>
   <signal>triggered()</signal>
   <receiver>MainWindow</receiver>
   <slot>loadText()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>252</x>
     <y>202</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>resultText</sender>
   <signal>textChanged()</signal>
   <receiver>MainWindow</receiver>
   <slot>myNewSlot()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>174</x>
     <y>273</y>
    </hint>
    <hint type="destinationlabel">
     <x>95</x>
     <y>76</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>applyRegExp()</slot>
  <slot>saveText()</slot>
  <slot>loadText()</slot>
  <slot>myNewSlot()</slot>
 </slots>
</ui>
